--- a/scss/module/content/_content.scss
+++ b/scss/module/content/_content.scss
@@ -9,5 +9,9 @@
     background: $content-bg;
     color: $content-font;
     min-height: 100vh;
-    padding: 13rem 0 4.25rem;
+    padding: 11rem 0 4.25rem;
+
+    @media (min-width: $md) {
+        padding: 13rem 0 4.25rem;
+    }
 }
