--- a/scss/module/content/_page-title.scss
+++ b/scss/module/content/_page-title.scss
@@ -16,7 +16,7 @@
         &::after {
             content: '';
             display: block;
-            width: 80%;
+            width: 14.5rem;
             height: 1px;
             margin: 1rem auto;
             background: #fff;
