--- a/scss/module/footer/columns/_css-is-awesome.scss
+++ b/scss/module/footer/columns/_css-is-awesome.scss
@@ -2,7 +2,6 @@
     display: inline-block;
     position: relative;
     z-index: 5;
-    overflow: hidden;
     font-size: 1.75rem;
     line-height: 2rem;
     padding: 0.5rem;
